--- a/index.ipynb
+++ b/index.ipynb
@@ -1078,7 +1078,7 @@
     }
    ],
    "source": [
-    "street_distance(fred, natalie) # 4"
+    "street_distance(natalie, )) # 4"
    ]
   },
   {
