Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1063,11 +1063,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "street_distance((fred, natalie)) # 4"
+    "street_distance(fred, natalie) # 4"
    ]
   },
   {
