Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1134,14 +1134,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-19-49eae8695be9>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-49eae8695be9>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return (avenue_distance** + street_distance**)\u001b[0m\n\u001b[0m                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    return (avenue_distance** + street_di)"
+    "    return (avenue_distance** + street_distance**)"
    ]
   },
   {
