--- a/index.ipynb
+++ b/index.ipynb
@@ -1148,7 +1148,7 @@
    ],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    return (avenue_distance** + street_distance**)"
+    "    return avenue_distance** + street_distance**)"
    ]
   },
   {
