Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1134,21 +1134,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-20-8c3845150188>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-21-a059a4704da5>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-8c3845150188>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return avenue_distance** + street_distance**\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-a059a4704da5>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return (avenue_distance)** + (street_distance)**\u001b[0m\n\u001b[0m                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    return avenue_distance** + street_distance**"
+    "    return (avenue_distance)** + (street_distance)**"
    ]
   },
   {
@@ -1160,6 +1160,24 @@
    "outputs": [],
    "source": [
     "distance_between_neighbors_squared(fred, natalie) # 17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-22-ecf75f4aa331>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-ecf75f4aa331>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    2**\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "2**"
    ]
   },
   {
