--- a/index.ipynb
+++ b/index.ipynb
@@ -1139,7 +1139,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    return (abs(first_neighbor['street']-second_neighbor['street'])**2 + (street_distance)**2"
+    "    return (abs(first_neighbor['street']-second_neighbor['street']))**2 + (street_distance)**2"
    ]
   },
   {
