--- a/index.ipynb
+++ b/index.ipynb
@@ -1206,7 +1206,7 @@
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    return "
    ]
   },
   {
