Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1164,23 +1164,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "2"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
