--- a/index.ipynb
+++ b/index.ipynb
@@ -1289,15 +1289,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 46,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    for neighbor in neighbors;"
    ]
   },
   {
