Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1296,7 +1296,7 @@
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    for neighbor in neighbors:\n",
-    "        distance_and_name = "
+    "        distance_and_name = neighbors['name'] + distance (fred, neighbor)"
    ]
   },
   {
