--- a/index.ipynb
+++ b/index.ipynb
@@ -1295,9 +1295,7 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    for neighbor in neighbors:\n",
-    "        distance_and_name = distance(fred, neighbor)\n",
-    "        distance_with_neighbor.append(distance_and_name)\n",
+    "    return neighbor\n",
     "        "
    ]
   },
