--- a/index.ipynb
+++ b/index.ipynb
@@ -1295,7 +1295,8 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    return neighbor\n",
+    "    return distance(first_neighbor, second_neighbor)\n",
+    "\n",
     "        "
    ]
   },
